EliteMobs 9.3.0 - [New] Improved commands and command completion - [New] Added /logify command to allow admins to easily upload server logs to mclo.gs - [Fix] Fixed error where disguised entities would not recover disguises correctly - [Fix] Fixed problem where entities would never correctly be detected as unloading, which could in edge cases cause ghost entities and minor memory problems - [Tweak] Sped up arrow speed of bullet hell and skeleton tracking arrow powers - [Removal] Removed some useless logging
Signed-off-by: MagmaGuy <tiagoarnaut@gmail.com>